--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==9.0.1
 click==8.0.1
 dnspython==1.16.0
 Flask==2.0.1
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
@@ -9,4 +10,5 @@ pymongo==3.12.0
 python-dotenv==0.19.0
 pytz==2021.1
 six==1.16.0
+watchdog==2.1.6
 Werkzeug==2.0.1
