--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 aniso8601==9.0.1
-click==8.0.3
-Flask==2.0.2
+click==8.0.1
+dnspython==1.16.0
+Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 itsdangerous==2.0.1
-Jinja2==3.0.2
+Jinja2==3.0.1
 MarkupSafe==2.0.1
-python-dotenv==0.19.1
-pytz==2021.3
+pymongo==3.12.1
+python-dateutil==2.8.2
+python-dotenv==0.19.0
+pytz==2021.1
 six==1.16.0
-Werkzeug==2.0.2
+watchdog==2.1.6
+Werkzeug==2.0.1
