--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ click==8.0.1
 dnspython==1.16.0
 Flask==2.0.1
 Flask-Cors==3.0.10
-Flask-JWT==0.3.2
+Flask-JWT-Extended==4.3.1
 Flask-RESTful==0.3.9
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 pycparser==2.21
-PyJWT==1.4.2
+PyJWT==2.3.0
 pymongo==3.12.1
 python-dateutil==2.8.2
 python-dotenv==0.19.0
